--- a/styles/style.css
+++ b/styles/style.css
@@ -27,10 +27,11 @@ body {
 }
 
 .logo {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    width: 100px;
+    position: fixed;
+    top: 2%;
+    left: 2%;
+    width: 10vw;
+    max-width: 100px;
 }
 
 main {
@@ -151,5 +152,12 @@ button:hover {
     .izq, .der__resultado {
         width: 45%;
         margin-bottom: 0;
+    }
+
+    .logo {
+        top: 2%;
+        left: 2%;
+        width: 8vw;
+        max-width: 100px;
     }
 }
